--- a/quill.html
+++ b/quill.html
@@ -64,6 +64,11 @@
             <span class="ql-formats">
                 <button class="ql-clean"></button>
             </span>
+            <!-- Add custom button -->
+            <span class="ql-formats">
+                <button class="ql-insertHeart">♥</button>
+            </span>
+
         </div>
         <div class="form-group" id="FormBody">
             <!--This textarea will not be shown to user. (Quill adds bootstrap d-none class)-->
@@ -83,6 +88,13 @@
 <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="quill-blot-formatter.min.js"></script>
+<script>
+function insertHeart() {
+    const cursorPosition = quill.getSelection().index;
+    quill.insertText(cursorPosition, "♥");
+    quill.setSelection(cursorPosition + 1);
+}
+</script>
 <script src="quill-config.js"></script>
 
 <script>
