--- a/quill.html
+++ b/quill.html
@@ -66,7 +66,7 @@
             </span>
             <!-- Add custom button -->
             <span class="ql-formats">
-                <button class="ql-insertHeart">♥</button>
+                <button class="ql-insert-namuH2">H2</button>
             </span>
 
         </div>
